Fix playbar button overlap

--- a/app/assets/stylesheets/api/home.scss
+++ b/app/assets/stylesheets/api/home.scss
@@ -140,6 +140,7 @@ html, body, #root {
    margin:0;
    padding:0;
    height:100%;
+   background: black;
 }
 
 .body {
